--- a/index.html
+++ b/index.html
@@ -24,17 +24,30 @@
 <h1>Alex Tyurin Personal Portfolio</h1>
 </header>
 <hr>
+  <div class="container">
+<nav>
+  <div class="row">
+    <div class="col-md-12">
+      <span class="label label-info">HTML5</span>
+      <span class="label label-info">CSS</span>
+      <span class="label label-info">JavaScript</span>
+      <span class="label label-info">Ajax</span>
+      <span class="label label-info">JSON</span>
+      <span class="label label-info"></span>
+    </div>
+  </div>
+</nav>
 
 <section>
-  <div class="container">
+
     <div class="row">
       <div class="col-md-4">
         <img class="img-rounded" src="img/project_2.png">
       </div>
     </div>
-  </div>
-</section>
 
+</section>
+  </div>
 
 
 <script type="text/javascript">
