--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Alex Tyurin Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
@@ -24,30 +25,27 @@
 <h1>Alex Tyurin Personal Portfolio</h1>
 </header>
 <hr>
-  <div class="container">
-<nav>
-  <div class="row">
-    <div class="col-md-12">
-      <span class="label label-info">HTML5</span>
-      <span class="label label-info">CSS</span>
-      <span class="label label-info">JavaScript</span>
-      <span class="label label-info">Ajax</span>
-      <span class="label label-info">JSON</span>
-      <span class="label label-info"></span>
-    </div>
-  </div>
-</nav>
-
-<section>
-
-    <div class="row">
-      <div class="col-md-4">
-        <img class="img-rounded" src="img/project_2.png">
+<div class="container">
+    <nav>
+      <div class="row">
+        <div class="col-md-12">
+          <span class="label label-info">HTML5</span>
+          <span class="label label-info">CSS</span>
+          <span class="label label-info">JavaScript</span>
+          <span class="label label-info">Ajax</span>
+          <span class="label label-info">JSON</span>
+        </div>
       </div>
-    </div>
+    </nav>
 
-</section>
-  </div>
+    <section>
+      <div class="row">
+        <div class="col-md-4">
+          <img class="img-rounded" src="img/project_2.png">
+        </div>
+      </div>
+    </section>
+</div>
 
 
 <script type="text/javascript">
