--- a/index.html
+++ b/index.html
@@ -1,59 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Alex Tyurin Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Alex Tyurin Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
-  <!-- BOOTSTRAP -->
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
 
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- BOOTSTRAP -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
 <header>
-<img class="img-circle" src="img/Iam.jpg">
-<h1>Alex Tyurin Personal Portfolio</h1>
+    <img class="img-circle" src="img/Iam.jpg">
+    <h1>Aleksey Tyurin Personal Portfolio</h1>
 </header>
 <hr>
 <div class="container">
     <nav>
-      <div class="row">
-        <div class="col-md-12">
-          <span class="label label-info">HTML5</span>
-          <span class="label label-info">CSS</span>
-          <span class="label label-info">JavaScript</span>
-          <span class="label label-info">Ajax</span>
-          <span class="label label-info">JSON</span>
+        <div class="row">
+            <div class="col-md-12">
+                <span class="label label-info">Angular</span>
+                <span class="label label-info">HTML5</span>
+                <span class="label label-info">CSS</span>
+                <span class="label label-info">JavaScript</span>
+                <span class="label label-info">Ajax</span>
+                <span class="label label-info">JSON</span>
+            </div>
         </div>
-      </div>
     </nav>
 
     <section>
-      <div class="row">
-        <div class="col-md-4">
-          <img class="img-rounded" src="img/project_2.png">
+        <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-6">
+                <a href="wiki/"><img class="img-responsive" src="img/project_1.png"></a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-6">
+                <img class="img-responsive" src="img/project_2.png">
+            </div>
         </div>
-      </div>
+
     </section>
 </div>
 
 
 <script type="text/javascript">
-  var h1Elements = document.querySelectorAll('h1');
+    var h1Elements = document.querySelectorAll('h1');
     for (var ele of h1Elements) {
-      ele.innerHTML = ele.innerHTML.toLowerCase();
-      console.log(ele.innerHTML)
-  }
+        ele.innerHTML = ele.innerHTML.toLowerCase();
+        console.log(ele.innerHTML)
+    }
 </script>
 </body>
 </html>
