Create Button with link to repo

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
 <header>
-    <img class="img-circle" src="img/Iam.jpg">
+    <img class="img-circle" src="assets/img/Iam.jpg">
     <h1>Aleksey Tyurin Personal Portfolio</h1>
 </header>
 <hr>
@@ -51,11 +51,14 @@
     <section>
         <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-6">
-                <a href="wiki/"><img class="img-responsive" src="img/project_1.png"></a>
+                <a href="wiki/"><img class="img-responsive" src="assets/img/project_1.png"></a>
+                <div class="text-center">
+                    <a class="btn btn-info" href="https://github.com/AlekseyTyurin/alekseytyurin.github.io/tree/master/wiki">{ Code }</a>
+                </div>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-6">
-                <img class="img-responsive" src="img/project_2.png">
+                <img class="img-responsive" src="assets/img/project_2.png">
             </div>
         </div>
 
