Apply limitTo filter and set for content limit of 200 chars

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="col-md-4 col-sm-6 col-xs-6">
                 <a href="wiki/"><img class="img-responsive" src="assets/img/project_1.png"></a>
                 <div class="text-center">
-                    <a class="btn btn-inverse" href="https://github.com/AlekseyTyurin/alekseytyurin.github.io/tree/master/wiki">{ Code }</a>
+                    <a class="btn info" href="#">Preview</a>
+                    <a class="btn default" href="https://github.com/AlekseyTyurin/alekseytyurin.github.io/tree/master/wiki">{ Code }</a>
                 </div>
             </div>
 
