1. Add new article content to json file 2. Add new image content 3. Add new content with code example

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -78,6 +78,7 @@
                 <h4><a href="#">{{article.title}}</a></h4>
                 <!--<p>{{article.snippet | limitTo : 200 : 0}}</p>-->
                 <p>{{article.snippet}}</p>
+                <code style="white-space: pre-wrap; word-wrap: break-word;">{{article.example1}}<br>{{article.example2}}</code>
             </article>
         </section>
         <hr>
